fixed login with auth0